--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -109,6 +109,21 @@ button {
         text-transform: uppercase;
     }
 
+    #filterInput {
+        border-radius: 4px;
+        border: 0;
+        box-shadow: 0px 0px 0.5rem #fff;
+        font-weight: bold;
+        color: #757575;
+        font-size: 16px;
+        margin: 10px 0px 7px 0px;
+        text-align: center;
+
+        &::placeholder {
+            text-align: center;
+        }
+    }
+
     .table-projects {
         img {
             max-width: 40px;
